--- a/calculateArea/calculate_Area.html
+++ b/calculateArea/calculate_Area.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Rectangle Area Calculator</h1>
         <label for="length">Enter the length: </label>
-        <input type="number" id="length"><br>br>
+        <input type="number" id="length"><br><br>
 
         <label for="width">Enter the width: </label>
         <input type="number" id="width"><br><br>
@@ -15,6 +15,20 @@
         <p id="result"></p>
 
         <script src="./calculate_Area.js"></script>
+
+        <h1>Groceries total</h1>
+        <label for="grocery1">Enter Grocery 1 amount: </label>
+        <input type="number" id="grocery1"><br><br>
+
+        <label for="grocery2">Enter Grocery 2 amount: </label>
+        <input type="number" id="grocery2"><br><br>
+        
+        <label for="grocery3">Enter Grocery 3 amount: </label>
+        <input type="number" id="grocery3"><br><br>
+
+        <p id="groceryTotal"></p>
+
+        <button onclick="calculateGroceries()">Calculate Total Amount</button><br><br>
+
     </body>
     </html>
-    
