Remove all to do

--- a/TodoList/todo_list.html
+++ b/TodoList/todo_list.html
@@ -14,6 +14,9 @@
 </ul>
 
 <button id="clearCompletedBtn">Clear Completed</button>
+<p>
+    <button id="clearAllTasksBtn">Clear ALL Tasks</button>
+</p>
 
 <script src="./todo_list.js"></script>
 </body>
