--- a/weatherReport/weather_report.html
+++ b/weatherReport/weather_report.html
@@ -12,7 +12,18 @@
     <button type="submit">Get Weather</button>
   </form>
 
-  <div id="weatherInfo"></div>
+  <div id="weatherInfo"><h2>Weather by City</h2></div>
+
+  <form id="weatherFormByCoords">
+    <label for="latitude">Enter Latitude:</label>
+    <input type="text" id="latitude" name="latitude">
+    <label for="longitude">Enter Longitude:</label>
+    <input type="text" id="longitude" name="longitude">
+    <button type="submit">Get Weather</button>
+  </form>
+
+  <div id="weatherByCoords"><h2>Weather by Lat/Lon</h2></div>
+
 <script src="./weather_report.js"></script>
 </body>
 </html>
